lab1/Test/L1-A-0-78.cmm
float byxMO6FuqfP5vczJ ( ) {
  if ( - - - ! jwPVnzmDS ( ) [ Aqo ] . KwNxP [ lECQEqTs 
    ] * - - 1486329305.1178670457 . _ . L8_xKOqjKaZd_tlzZVTv 
    [ OuGv0SRc3 ] / ! ! ! qH / - ! nGnwmoFYMZc4M02 ( ) 
    . Jgx [ Wa9i4iKg_OW ] [ D9h6w3dGq8QakMAwr ] . G - 
    _zYjkz4mVm7CoQ4DJT ( ! qp8ltNLFCXs = aXGth1eYMYcxuWSbVDr2 
    , yP ) / ! fRUWrYHVwU9Yqiy / - YoZdVDPCelmWLR / ! 
    n + ! - ( ZONUOHVUAFwWTNwyaLe ) / ! QotLQApSX6HCV 
    * ! Zi + ! b28 . MS0y4k . Tl7UGHERoBhPc [ Dpw4DMdHo0x 
    ] == - ckk1xMXkS7D ( xY0Z ) * - VcfY7o * GmmSxmwpC5YimuV 
    ( ) [ EKTrHPEI4HoCN5lIve1_ ] [ mY7_K6ncP ] . bR76naseRHgTW7A5 
    . lSp . k1TmyjyFAJY9 / - WGJfv1 / - ZT7GBohtlvKZPXwZo 
    * ! yvN6 <= ! - - X9orPwnIkERB * sJ0qMMIZe5TfOx ( 
    bR5gxs5kUOzSh830rk ) / ! DD1AIkfYsn / - MX5yTw__EVq8EK 
    / c5DHWtsrWdVJjgtPqikS ( ) * ! RJ2qfzb / ! cyXIl - 
    ! NEnTCvz22YF + ! df9sldBp / pvs * f9kRBKAP / ieIfLuK 
    - nOl4iH ( ) . xWEifhvYeECUnePy + - scGwLa - F8tJtIMtNnV9kPPWN7l 
    ( ) / f6QOauzhSzktFOD - ! GNhGkh2UGFYnMvrech + jR2KDpvDvTgP 
    ( ) . bxMAMeUj <= ! vwtj1jXzWcfxNuhfX + 826856029 
    . ph0D + - PT / v2V37wUIwD5tbcYSI_ * N_NlazIj1o * 
    dx1fN0MaUy8JiFTG / JSq / eSjlX - - pqbJA3XaZVHkz != 
    _PAgn9Tvf ( - baJvRejh / IIoQLLOigzYoW8uD68k / _tDaV8ATIY 
    * TWQizliR9 / i * tuZJcbPWcDGA8KAWMHhg * YvG28rMHkZiN 
    * Yd0XyGea != MWPYVJ5nMCZAATs <= l942lb6Ic0UdxSuPu9 
    && oPSHoFPjvb3kF , ghezd5 ) / _sWRBpMYk42wX0Glz ( 
    nfkuTZbo71Za ) [ vfo48jz ] [ B5lG5 ] . ZHNImHFUORUHj0LcY 
    . bhg57Crx43xcoCATs + ! u68 * nyF2moQ / mmE0wwzEOc 
    / k_WG7Vry4moD > - ! JLMeRBmUm4LisOQTc ( Z_i9VBk ) 
    / IB ( CBDRog_ifVT08Af ) + ! IoMcwebwcjtxr / q5b7 
    * SSTplrhqE / MTYsfDxxiE89ai9 / tO1Jjawc_xLFGI2fpTAQ 
    / yU0vAC8iLCHzSe / LYsK4bdxnDIk_4_bJSk / hTOOT / tCl7wzPoR4jCVD 
    - 471884059.508895170 / Cp6W2uuTu8n49 * Ao - ! FaRFLbz6Ve9CF7vxE 
    / jF * QyUSdUC734JQuv9I76 * KZvoN9INkChvgpNiP * Etez8rsYxZRaV4jD 
    * XUTO8nJZ0Qual4G * I5Q - - OhHmINIbVPiArRp / SDFr 
    + p_Nl3QfK [ NKAfxGkj ] * aIGCmaNgd6RXr7yibFe * eBgdYjCmz_i 
    / EUvsO2 / T4 / SdyAry6QaHDU0 * elTPaS4IXFgx >= - 
    - ! XBML_Wu / Lydcg__Bg1asKhLILHdc . lHoO / muaG6FC 
    ( ) * - iZXxq > - - - uYKMDHf5Jk * ! Lp8TJi / - q9Q7EDdhNh1xQT5 
    / - p0Gm * FJ_7KXLF ( ) [ N_gOkeX ] [ Hfa ] / I6TYSjG 
    ( ) / 1834436401.716218384 * ! BDYj / gGplIw ( ecrH8kXarTH3WlXC 
    ) [ i3RK4fHIejuT4dqJ ] / ! leh * 1425870519 != ! esN5az9Q9NZQX 
    ( pnRFH ) [ o7463g8XUWJ ] / ! qVEZVXd < qc5OZX_jL 
    * ! uPFf * ! CZ2RXORuDbja - ! g && ! ! ! xzLp1 + - 
    w6VCI8YL7Sw8WbH_ / CrrORFW != ! Dt / I * ydqznhtcj3E2OMovca 
    - KMWdj5HbOZP - FRhLfm35ZdLEUWiv + JVrP + s >= ! BlRM6wE 
    / QPaJBft0P * eZP3ouK_X * gM32aGGc5YQ / BR5BSTMDWdOvikZ 
    / XzuO9 / dHbYmXfCnLfHE9MMFkFB - LIQt44hiIJ26FkPXRMK6 
    - _sSuJ9YqgAK8JJjSW - Du4janlplMRpy2xr_qOC + H474xOFYFKtAtsF 
    - WF5WbhBZjPYHRtbp9DEg + DjwVfiWVERM + KS_eo9ydIHL 
    - cDcf - Qj6RF5I8YbSw7 - QmPoMd7pGgbs3Jlv_ - a5Esx_SNYjw83G4G 
    - nAATODlW - rCpaCUnUk6PrQB + XBpfFkvMXiS - qsDU4gWZoB 
    >= ! rRgV5JqWf5sjO_i8wRSY / M - sE8vTN - aI9u <= j7t6wRGuHRmNoFG2H 
    ( g ) . jjTJg95MbMB * HAK70k4i / KxIcQ_60mtpw * org 
    != ! axwBmYhexsJBL6u < ! _o1 * ynHduy51GCPv / VEUj1cEq_C 
    / w_eyFjm - sZNytuBX8CfmHMEj32 )   return thHuOtyypTuTI 
    ( ) = xE ;
else   if ( GgJXgX8u6G1r7Jr8TIZa )   JDf8891K ;


  1470548593 * LV4CG62MizJEJ9plomII ( ! - h3mB = RoI6xkDWNr8ytl6o 
    ) . EE_nWemK4JMpMwWkDfu . LjhmFEnwmh0j [ Furb00wbwfXJ 
    ( cs_ ) / qoGwYLb2wxd0T / GKxn * zrNFG >= cNJgQhWykHw1 
    <= LjR8w < XdMDnpx < TrfJRTfWaRl || qsOz8jxgZ7kO5K_pBRxn 
    ] . TnjZ * _Kg_8zow31 ( ! - aN0SPjuTFa * czEQY7ysGa 
    * kBmM8k / aDVGJPGc0YhYsedvN + xfLddfx04J7Zxr - IuEhg6cFoth9 
    <= oYaGw__mh4Zt != zD6ztrPWn1 <= BmH == n3J1v2tfOm 
    < HO0xpE6pIz > iuCXY5oyJ3HVJ < q0lOOK9fFL9ag >= Zxs9vDGENOQloQV 
    <= rsYyyC7L5I && tcLe && M3gRKpEM7j61pI7nGjjk || lQw6gMi7an8OfADZcEaf 
    || WxCDRl || n1AhdO3D_WNclfe || POZ3YwUzyJ_uo ) / 
    - eBk4lqXA ( ) - bWcIt27fNBvjI2Oe ( A30kcu0o6Vf4r 
    ( ) <= wEq >= GlETmN419J4nFcCK2 >= t8krf_aq4dEZNr7DCy 
    > cp4K_i1nD1A81OycjoSx > gRoDy2uhbjQW && Q_KVdBwgZGLoszucpI9o 
    ) . Io995mvy * wa2Ko3MdzkGA . MdhqkUoxDuztn [ h ] 
    [ ybe1GI ] . Fhb03L5_LZ * - nmaOFGMJi3PtTDs ( ah6a2d 
    ) / ! OJkFnvIadNuinZZbzkVi ( wTZKwWUazS7UVaiCY ) [ 
    vYTgw ] - ( jQ7kPQ88vffBRYb ( ) . WAad53iejKdLyGn 
    = 1504019545.1140524160 = Nh9 ) < - - - - S / - TX 
    ( ) * ! dYbp8bWw9 ( wxz0oxGlB ) + - - JAaIBCs3g + 
    - ! gDR9V3IbN2U_n3aS7gUf + - v ( yJtWwSnvmnFggeite5Y 
    ) / zdpc_FjPE_EXD * hHYBEaEak >= - - - 1071091462 
    / ! M6nfJlD5EjuAYqj ( fI ) * - - OR6TfVIau9Ex * - 
    - NX4iO7tNszVPM8A / MtcQaIXBZZ5 ( ) [ QERt193fn9vfiypp 
    ] . NhIrvUGhAqeH . SgHMdSdUzvLonhr4ldk - - ! lAakUp 
    / HGkAXP7nEQSr314HfS * EZHUK7Kkd0upc + - - yHJD_TF_n 
    - - - Pel0GWD2Ngrkmnp / OBKf8fmtUoAu6Pmume - _vyBM 
    ( ') [ KM ] + - K7pgeVAJGhvRejLTr . jSsbuYUkSZH [ 
    sYSYl9Z3 ] / XCdnSPGV05hxRpW14 > - - - ! IoFGyuwty 
    / - - m + YHl_27g8SwAuUw4qM ( ) + ! - YXqEMx8LJsDZMhwtvY2 
    * QP * qmu2rvRIUoBKiXby / XTVaay_ - - - I14yCsmzv 
    * zd * SDHh2sN1jllf + Sn7lyTNFADKx09 ( ) . g1Kv6 [ 
    JDjS2f9yCVP1raSXA ] . N . cIxVtCJw0HBhUMeewhhA [ yJu96 
    ] . ZWhZfBafrpm8uXdffbE + ! ! Wx * jVv8BY * yob1phS 
    != 403763812.1089152700 [ fQV4QFeU9rrP_ ( EUP4UGdg22 
    ) . aBJXpGcVkgHoHSLxyoYf = QmkvPa3 ] * ! - tnw >= 
    ! ! kbShFZYF2KEzGVem709 ( LTU_pzADszH ) [ yQcfX9H7rQRo 
    ] <= Thi56HJSMo5 ( ) * - - HCwu9UjLaj6Dl && - lvTMS8wl__BO 
    [ - nEq07RcFup42KqfIy_Oq = yq ] * g9kVg2 ( ) + JUX9GBmIQ 
    ( xi5PPZIiTCRy2naIzdm ) . VAJNSoeRUKHRxXQoep - - - 
    qI5 / rsMZ * H / krPCbIH / OM7JhtngD3i8begW * LCrB 
    + XakReGi6kXE5oWQD ( ZVr8nOiLmLNXMK4IG ) . s / K0ady 
    * bd8h66 / QHD0tnQlYX91REzkyI > - - B * M0e3FJG6lsShO 
    / h7vpArf1vMeP9jNuWUZ * eQFMC - ryh7xNhHi4 <= - - 
    Te_YknwtHDE80C * UHkmIY / YluhlCz9iTYq1 + vkjhAjPGnbOPwVS1Jy 
    - xGi6J9ksZ - oqbHiezjBvhdHZR - e != ( ! COoUOVUwrM5e3nU 
    = up3f3b ) * DS7 / x3Piuf8rrVcJaTH1K ;
}
int ;
int VEUbAB09oXVrs 
;
struct {
  struct fnxL1LnvXLN wk5rI6O6R1M_8W [ 1172384785 ] 
    [ 1254073179 ] = - ! HpIoOipR9R = WzBVp , pde0BJP_8X127o 
    [ 453171629 ] [ 1007900136 ] = idU2 , WCjb5lzqQG ;
}P ( ) {
  int H , QjWs [ 631714198 ] [ 1964388010 ] , MgDAWdcOwOIBwjA2Ja5 
    ;
  if ( ! - J2 * tjfV7PLM2tO5hUMaHBNe / RY1PKydH6irWa3 
    / WM1PoVcdY / m / AJfV13Nj / NfgQgSlVX * inaQYtZ1tBGkFPKZh0P 
    * qvDt0ZKnmTZdMIP * gvlgaOP0 / Y15UOG4di * Cs3Hytx 
    * ACViZNnANT8FXlHPDJ2D > iepe4udo99V0Xsqf >= M2hNa 
    > TS8H2XKAtjOaDzA != QTl_ > Q < dMnSvYBAE7cq <= aYtry0EO8pn0 
    != CK40xSIQlWLWgTJNWwin != CGf_IBuP9jIgLKp == iQLGwWiY_UvDo4N 
    != tl7dbyGjJ_5j >= sKk > ninuWNOiaoKzRnNEeM < tgM7dHNQceT1 
    > SCOo != uX0QCuxA > erV677SPICe_Y < ctgb_m_ > wWSLXAuwQ0GfnyP 
    > n84H == WTULrHmAw2Msxv0AdIg < Mm8FWIfUSTYe7iwDpYTN 
    != nhEpyqSBSwMJ_O < qkQfwr && d3EcMbecjZ && QXlUtZEd 
    :&& _AKhjoM || aVSmjC11TIcCh || APFpG || FUKShyb0fvUR 
    )   aEyX ;
else   iJAYuWUu2MoBfhxG1dyp ;

}
